# mcp-for-db

./: .env  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
datas/version/: change.md
envs/: common.env  dify.env  tidb.env
files/: shows.md  test.txt
mcp_for_db/: __init__.py
mcp_for_db/client/: api.py  client.py  start_api.py
mcp_for_db/debug/: __init__.py  mcp_logger.py
mcp_for_db/envs/: .env  mysql.env
mcp_for_db/server/cli/: dify_cli.py  dify_entry.py  main.py  mysql_cli.py  mysql_entry.py  server.py  service_cli.py
mcp_for_db/server/common/: __init__.py  prompts.py  tools.py
mcp_for_db/server/common/base/: __init__.py  base_prompt.py  base_resource.py  base_tools.py
mcp_for_db/server/core/: __init__.py  base_server.py  config_manager.py  env_distribute.py  service_manager.py
mcp_for_db/server/server_dify/: __init__.py  dify_server.py
mcp_for_db/server/server_dify/config/: __init__.py  dify_config.py  request_context.py
mcp_for_db/server/server_dify/tools/: __init__.py  dify_knowledge.py  get_dify_infos.py  get_dify_knowledge.py  switch_dify_knowledge.py
mcp_for_db/server/server_mysql/: __init__.py  mysql_server.py
mcp_for_db/server/server_mysql/config/: __init__.py  database.py  request_context.py  session_config.py
mcp_for_db/server/server_mysql/prompts/: __init__.py  index_opt_advisor.py  perform_opt.py  query_table_data.py  smart_tools.py
mcp_for_db/server/server_mysql/resources/: __init__.py  db_resource.py  sql_log_resource.py
mcp_for_db/server/server_mysql/tools/: __init__.py  execute_sql.py  get_chinese_initials.py  get_mysql_health.py  get_mysql_stats.py  get_table_infos.py  mysql_analyzer.py  switch_database.py  tools_enhance.py  use_resource.py
mcp_for_db/server/shared/oauth/: __init__.py  config.py  middleware.py  routes.py  token_handler.py
mcp_for_db/server/shared/security/: db_scope_check.py  sql_analyzer.py  sql_interceptor.py  sql_parser.py  sql_query_limit.py
mcp_for_db/server/shared/templates/: login.html
mcp_for_db/server/shared/utils/: __init__.py  logger.py
mcp_for_db/test/: test_client_api.py  test_dify.py  test_mcp_mysql.py  test_mcp_responses.py  test_multi_user_context.py  test_mysql_stats.py  test_tools.py
scripts/: start_all.sh  stop_all.sh
src/client/: client_mysql.py
src/server/common/: __init__.py  prompts.py  tools.py  tools_selector.py  tools_work_flow.py  vector_cache.py
src/server/config/: .env  __init__.py  database.py  dbconfig.py  request_context.py
src/server/mcp/: cli.py  server_mysql.py
src/server/oauth/: __init__.py  config.py  middleware.py  routes.py  token_handler.py
src/server/prompts/: AnalysisMySqlIssues.py  DevelopmentEfficiency.py  EnhancedSecurity.py  IndexOptAdvisor.py  PerformOpt.py  QueryTableData.py  __init__.py  index_opt_advisor.py  perform_opt.py  query_table_data.py  tools_prompts.py
src/server/resources/: BaseResource.py  DataBaseResource.py  __init__.py  base.py  db_resource.py  log_resource.py
src/server/security/: __init__.py  db_scope_check.py  sql_analyzer.py  sql_interceptor.py  sql_parser.py  sql_query_limit.py
src/server/tools/mysql/: IndexAdvisor.py  __init__.py  alertprocessor.py  base.py  exceptions.py  execute_sql.py  get_chinese_initials.py  get_mysql_health.py  get_mysql_stats.py  get_table_infos.py  mysql_analyzer.py  switch_database.py  tools_enhance.py  use_prompt.py  use_prompt_query.py  use_prompt_queryTableData.py  use_resource.py
src/server/utils/: logger.py
src/test/: test_mysql_analysis.py  test_mysql_stats.py  test_resources.py  test_server.py  test_template_query.py  test_tools.py  test_tools_table_infos.py
templates/: login.html
version/: change.md
