[project]
name = "mcp-for-db"
version = "0.7.0"
license = { text = "MIT" }
description = "Continuously develop integrated MCP servers dedicated to databases to advance the application of AI for DB."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0.6",
    "mcp[cli]>=1.3.0",
    "mysql-connector-python>=9.2.0",
    "python-dotenv>=0.16.0",
    "pypinyin>=0.54.0",
    "aiomysql>=0.1.0",
    "jinja2>=2.11.3",
    "PyJWT>=2.8.0",
    "sqlparse>=0.5.2",
    "contextvars>=2.0",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0"
]

[[project.authors]]
name = "wenb1n"

[[project.authors]]
name = "liuhz"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 控制台脚本入口
[project.scripts]
mcp-for-db = "server.mcp.cli:stdio_entry"

[tool.hatch.build]
packages = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[project.urls]
Homepage = "https://github.com/flyboy711/mcp-for-db"
Documentation = "https://github.com/flyboy711/mcp-for-db/blob/main/README.md"
Repository = "https://github.com/flyboy711/mcp-for-db.git"